finish the section gallery

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>SunnySide | Landing Page</title>
     <link rel="shortcut icon" href="./assets/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@500;600&family=Fraunces:wght@700;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -38,14 +38,35 @@
             </div>
         </div>
     </header>
-    <!-- <section class="gallery">
+    <section class="gallery">
         <div class="only-text">
-            <h2>Transform your brand</h2>
-            <p>We are full-service creative agency specializing in helping brands grow fast</p>
+            <div class="title">Transform your <br/> brand</div>
+            <div class="description">We are full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do must of the marketing for you.</div>
+            <a href="#">
+                Learn more
+                <div class="shadow-yellow"></div>
+            </a>
         </div>
-        <div class="only-image"></div>
-        <div class="mixed"></div>
-    </section> -->
+        <div class="only-image image-transform"></div>
+        <div class="only-image image-stand-out"></div>
+        <div class="only-text">
+            <div class="title">Stand out to the right <br/> audience</div>
+            <div class="description">Use collaborative formula of designers, researchers,
+                photographers, videographers, and copywriters, we'll build and extend your brand in digital places.</div>
+            <a href="#">
+                Learn more
+                <div class="shadow-soft-red"></div>
+            </a>
+        </div> 
+        <div class="mixed image-graphic-design">
+            <div class="title cyan">Graphic design</div>
+            <div class="description cyan">Great design makes you memorable. We deliver  artwork that underscores your brand message and captures potencial clients' attention.</div>    
+        </div>
+        <div class="mixed image-photography">
+            <div class="title dark-blue">Photography</div>
+            <div class="description dark-blue">Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</div>   
+        </div>
+    </section>
     <script src="./script.js"></script>
 </body>
 </html>
