including responsiveness, mobile menu in page and others

--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
                     </ul>
                 </nav>
             </div>
+            <div class="icon-menu-mobile">
+                <img src="./assets/icon-hamburger.svg" alt="Menu">
+            </div>
+            <div class="menu-mobile">
+                <nav>
+                    <div class="ballon"></div>
+                    <ul>
+                        <li>About</li>
+                        <li>Services</li>
+                        <li>Projects</li>
+                        <li>Contact</li>
+                    </ul>
+                </nav>
+            </div>
         </div>
         <div class="content-banner">
             <div class="title-banner">We are creatives</div>
@@ -67,6 +81,66 @@
             <div class="description dark-blue">Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</div>   
         </div>
     </section>
+    <section class="clients-testimonials">
+        <div class="title-testimonials">Client Testimonials</div>
+        <div class="testimonials-cards">
+            <div class="testimonial-card">
+                <img src="./assets/image-emily.jpg" alt="Emily R.">
+                <div class="testimonial">We put our trust in Sunnyside and they delivered , making sure our needs were met and deadlines were always hit.</div>
+                <div class="client-name">Emily R.</div>
+                <small>Marketing Director</small>
+            </div>
+            <div class="testimonial-card">
+                <img src="./assets/image-thomas.jpg" alt="Thomas S.">
+                <div class="testimonial">Sunnyside's enthusiasm coupled with their keen interest in our brand's success made it a satisfying and enjoyable experience.</div>
+                <div class="client-name">Thomas S.</div>
+                <small>Chief Operating Officer</small>
+            </div>
+            <div class="testimonial-card">
+                <img src="./assets/image-jennie.jpg" alt="Jennie F.">
+                <div class="testimonial">Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</div>
+                <div class="client-name">Jennie F.</div>
+                <small>Business Owner</small>
+            </div>
+        </div>
+        <div class="bullets">
+            <div class="bullet"></div>
+            <div class="bullet"></div>
+            <div class="bullet"></div>
+        </div>
+    </section>
+    <section class="food-gallery">
+        <div class="food milk"></div>
+        <div class="food orange"></div>
+        <div class="food cone"></div>
+        <div class="food sugar-cubes"></div>
+    </section>
+    <footer>
+        <div class="content-media">
+            <img src="./assets/logo-footer.svg" alt="Sunnyside">
+            <div class="menu-footer">
+                <ul>
+                    <li>About</li>
+                    <li>Services</li>
+                    <li>Projects</li>
+                </ul>
+            </div>
+            <div class="social-media">
+                <a href="#">
+                    <img src="./assets/icon-facebook.svg" alt="Facebook Sunnyside">
+                </a>
+                <a href="#">
+                    <img src="./assets/icon-instagram.svg" alt="Instagram Sunnyside">
+                </a>
+                <a href="#">
+                    <img src="./assets/icon-twitter.svg" alt="Twitter Sunnyside">
+                </a>
+                <a href="#">
+                    <img src="./assets/icon-pinterest.svg" alt="Pinterest Sunnyside">
+                </a>
+            </div>
+        </div>
+    </footer>
     <script src="./script.js"></script>
 </body>
 </html>
