--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
     </header>
     <section class="gallery">
-        <div class="only-text">
+        <div class="only-text two">
             <div class="title">Transform your <br/> brand</div>
             <div class="description">We are full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do must of the marketing for you.</div>
             <a href="#">
@@ -63,7 +63,7 @@
         </div>
         <div class="only-image image-transform"></div>
         <div class="only-image image-stand-out"></div>
-        <div class="only-text">
+        <div class="only-text four">
             <div class="title">Stand out to the right <br/> audience</div>
             <div class="description">Use collaborative formula of designers, researchers,
                 photographers, videographers, and copywriters, we'll build and extend your brand in digital places.</div>
